--- a/Logging.txt.1
+++ b/Logging.txt.1
@@ -1,4 +1,4 @@
-May 09, 2023 8:41:23 PM game.util.Logging setup
+May 09, 2023 10:50:49 PM game.util.Logging setup
 INFO: Set up logging
-May 09, 2023 8:41:29 PM game.connection.ClientUDP run
-WARNING: Address already in use: bind
+May 09, 2023 10:51:40 PM game.connection.handlers.ClientTcpHandler channelInactive
+INFO: Disconnected from server
